Fix EventService list method to use modifiable list